--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container">
+<a id="btn-sort-max" class="waves-effect waves-light btn">min</a>
+<a id="btn-sort-min" class="waves-effect waves-light btn">max</a>
+<a id="btn-sort-hour" class="waves-effect waves-light btn">percent_change_per 1hour
+
+</a>
+<a id="btn-sort-day" class="waves-effect waves-light btn">percent_change_per day</a>
+<a id="btn-sort-alph" class="waves-effect waves-light btn">alph</a>
+</div>
 
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -16,4 +25,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/script.js"></script>
 </body>
-</html>
+</html
