--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html
