--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <div class="modal-content">
         <h4>Modal Header</h4>
         <p>A bunch of text</p>
+
+        <div class="container-grap">
+            <div class="grap">
+                <canvas id="myChart"></canvas>
+            </div>
+        </div>
+
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
@@ -50,6 +57,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
+<script src="java_12.02.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
