--- a/index_12.02.html
+++ b/index_12.02.html
@@ -32,6 +32,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.js">
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-<script src="java_12.02.js"></script>
+<!--<script src="java_12.02.js"></script>-->
+<script src="graph2.js"></script>
 </body>
 </html>
