--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/locale/ru.js">
     <link rel="stylesheet" href="css/style.css">
     <style type="text/css">
         .minTest {
         }
     </style>
+
 </head>
+
 <body>
+<div class="input-cryptocurrency"></div>
 <div class="container">
 <a id="btn-sort-max" class="waves-effect waves-light btn">min</a>
 <a id="btn-sort-min" class="waves-effect waves-light btn">max</a>
-<a id="btn-sort-hour" class="waves-effect waves-light btn">percent_change_per 1hour
-</a>
+<a id="btn-sort-hour" class="waves-effect waves-light btn">percent_change_per 1hour</a>
 
     <!--<div class="input-field col s12">-->
         <!--<select class="allOptions">-->
