--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 <body>
 
+<div class="row">
+    <form id="filterPrice">
+        <p>
+            <input type="checkbox" class="filled-in" id="priceValue_1" value="0,500"/>
+            <label for="priceValue_1">0 - 500</label>
+        </p>
+        <p>
+            <input type="checkbox" class="filled-in" id="priceValue_2" value="500,1000"/>
+            <label for="priceValue_2">500 - 1000</label>
+        </p>
+        <p>
+            <input type="checkbox" class="filled-in" id="priceValue_3" value="1001"/>
+            <label for="priceValue_3">1000+</label>
+        </p>
+        <a class="waves-effect waves-light btn" id="filter">button</a>
+    </form>
+</div>
+
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
