fix merge conflict

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
 <!-- Modal Structure -->
 <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="modal-title"></h4>
+        <!--<p>A bunch of text</p>-->
 
         <div class="container-grap">
             <div class="grap">
-                <canvas id="myChart"></canvas>
+                <!--<canvas id="myChart"></canvas>-->
             </div>
         </div>
 
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
     </div>
 </div>
 
@@ -83,7 +83,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
-<script src="java_12.02.js"></script>
+<script src="graph2.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
