--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <!--//sidebar start-->
 
     <ul id="slide-out" class="side-nav">
+        <h4>Sort currency</h4>
         <!--<li><div class="user-view">-->
             <!--<div class="background">-->
                 <!--<img src="img/bitcoin.png">-->
@@ -31,7 +32,6 @@
         <a id="btn-sort-min" class="waves-effect waves-light btn">max</a>
         <a id="btn-sort-hour" class="waves-effect waves-light btn">1hour
         </a>
-        <li><div class="divider"></div></li>
         <!--<li><a class="subheader">Subheader</a></li>-->
         <a id="btn-sort-day" class="waves-effect waves-light btn">per day</a>
         <a id="btn-sort-alph" class="waves-effect waves-light btn">alph</a>
