--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <div class="box card-responsive"></div>
 
+
+
+
+<!--<canvas id="myChart" width="400" height="400"></canvas>-->
+
         <!--<div class="card">-->
             <!--<div class="card-image">-->
                 <!--<img src="images/sample-1.jpg">-->
@@ -34,9 +39,12 @@
 
  Modal Structure
 <div id="modal1" class="modal">
+
     <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <canvas id="myChart" width="400" height="400"></canvas>
+
+            <!--<h4>Modal Header</h4>-->
+            <!--<p>A bunch of text</p>-->
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
