--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         }
     </style>
 
+
 </head>
 
 <body>
@@ -77,6 +78,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
 <script src="java_12.02.js"></script>
-<script src="js/script.js"></script>
+<script src="js/find_cryptocurrency.js"></script>
 </body>
 </html>
