--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
 <script src="graph2.js"></script>
-<script src="js/find_cryptocurrency.js"></script>
+<script src="js/find_curency.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
