--- a/index.html
+++ b/index.html
@@ -15,44 +15,54 @@
 </head>
 <body>
 <div class="container">
-<a id="btn-sort-max" class="waves-effect waves-light btn">min</a>
-<a id="btn-sort-min" class="waves-effect waves-light btn">max</a>
-<a id="btn-sort-hour" class="waves-effect waves-light btn">percent_change_per 1hour
-</a>
 
-    <!--<div class="input-field col s12">-->
-        <!--<select class="allOptions">-->
-            <!--<option value="" disabled selected>Choose your option</option>-->
-            <!--<option class="minTest" value="1">Min</option>-->
-            <!--<option class="maxTest" value="2">Max</option>-->
-            <!--<option class="rangTest" value="3">Rang</option>-->
-            <!--<option class="hourTest" value="4">percent_change_per 1hour</option>-->
-            <!--<option class="dayTest" value="5">percent_change_per day</option>-->
-            <!--<option class="alphTest" value="6">alph</option>-->
+<!--//sidebar start-->
 
-        <!--</select>-->
-        <!--<label>Cripto Select</label>-->
-    <!--</div>-->
+    <ul id="slide-out" class="side-nav">
+        <h4>Sort currency</h4>
+        <!--<li><div class="user-view">-->
+            <!--<div class="background">-->
+                <!--<img src="img/bitcoin.png">-->
+            <!--</div>-->
+            <!--<a href="#!user"><img class="circle" src="images/yuna.jpg"></a>-->
+            <!--<a href="#!name"><span class="white-text name">Bootcamp</span></a>-->
+            <!--<a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>-->
+        <!--</div></li>-->
+        <a id="btn-sort-max" class="waves-effect waves-light btn">min</a>
+        <a id="btn-sort-min" class="waves-effect waves-light btn">max</a>
+        <a id="btn-sort-hour" class="waves-effect waves-light btn">1hour
+        </a>
+        <!--<li><a class="subheader">Subheader</a></li>-->
+        <a id="btn-sort-day" class="waves-effect waves-light btn">per day</a>
+        <a id="btn-sort-alph" class="waves-effect waves-light btn">alph</a>
+        <a id="btn-sort-rank" class="waves-effect waves-light btn">rank</a>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
-<a id="btn-sort-day" class="waves-effect waves-light btn">percent_change_per day</a>
-<a id="btn-sort-alph" class="waves-effect waves-light btn">alph</a>
+    <!--//sidebar end-->
+
+
+
+
 </div>
 
 <!-- Modal Structure -->
 <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="modal-title"></h4>
+        <!--<p>A bunch of text</p>-->
 
         <div class="container-grap">
             <div class="grap">
-                <canvas id="myChart"></canvas>
+                <!--<canvas id="myChart"></canvas>-->
             </div>
         </div>
-
+        <div class="rotate__mobile">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2ivhAtkMXk-fIfbrZceUTGgzSg1UBTe-ix_tBiS94q_b6cZGi" alt="rotate">
+        </div>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
     </div>
 </div>
 
@@ -75,7 +85,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 <script src="js/sort.js"></script>
-<script src="java_12.02.js"></script>
+<script src="graph2.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
