--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
 <body>
 
-<div class="input-cryptocurrency"></div>
+<div class="input-cryptocurrency">
+    <ul id='dropdown' class='dropdown-content'>
+
+    </ul>
+</div>
+
 
 <div class="container">
 
